<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">Home Health</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home"></string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="welcome">Welcome %1$s!</string>
    <string name="title_activity_profile"></string>
    <string name="title_activity_record_symptom"></string>
    <string name="allergies">Any specific allergies?</string>
    <string name="longTermIllness">What about long term illnesses?</string>
    <string name="height">What is your height?</string>
    <string name="weight">And... weight?</string>
    <string name="dob">When were you born?</string>
    <string name="user">user</string>
    <string name="set_preferences">Profile</string>
    <string name="help">Help</string>
    <string name="symptom">Record Symtoms</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="diagnosis_button">Send Diagnosis</string>
    <string name="role">Are you a Patient or a Doctor?</string>
    <string name="symptoms">Symptoms</string>
    <string name="symptomDate">Symptom Date</string>
    <string name="doctorRole">Type of doctor you want to consult</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_help"></string>
    <string name="title_activity_symptom"></string>
    <string name="titleDoctorRole">Doctor Role</string>
    <string name="titleDate">Date</string>
    <string name="docName">Doctor</string>
    <string name="logout">Logout</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="patientName">Patient Name</string>
    <string name="title_activity_patient_diagnosis">PatientDiagnosisActivity</string>
    <string name="title_activity_give_diagnosis">GiveDiagnosisActivity</string>
    <string name="diagnosisHint">Your Diagnosis</string>
    <string name="selectPatient">Select a patient</string>

</resources>