<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/patients"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selectPatient" />

    <EditText
        android:id="@+id/diagnosis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diagnosisHint"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis_button" />

</LinearLayout>